--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "allowSyntheticDefaultImports": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "src/config.example.ts"]
+  "exclude": ["node_modules", "dist", "src/config/local.example.ts"]
 }
