--- a/package.json
+++ b/package.json
@@ -59,6 +59,9 @@
     "typescript": "^5.9.3"
   },
   "pnpm": {
+    "overrides": {
+      "minimatch": "^10.2.1"
+    },
     "onlyBuiltDependencies": [
       "esbuild"
     ]
